--- a/FacebookWinFormsApp/C23 Ex01 Asaf 208543702 Amit 209088434.csproj
+++ b/FacebookWinFormsApp/C23 Ex01 Asaf 208543702 Amit 209088434.csproj
@@ -96,7 +96,7 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="PageStatistic.cs" />
+    <Compile Include="PageStatistics.cs" />
     <Compile Include="PostScheduler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
