--- a/FacebookWinFormsApp/C23 Ex01 Asaf 208543702 Amit 209088434.csproj
+++ b/FacebookWinFormsApp/C23 Ex01 Asaf 208543702 Amit 209088434.csproj
@@ -90,6 +90,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FBService.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
