--- a/FacebookWinFormsApp/C23 Ex01 Asaf 208543702 Amit 209088434.csproj
+++ b/FacebookWinFormsApp/C23 Ex01 Asaf 208543702 Amit 209088434.csproj
@@ -90,18 +90,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FBService.cs" />
+    <Compile Include="Schedulers\IScheduler.cs" />
+    <Compile Include="FBService\FBService.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="PageStatistics.cs" />
-    <Compile Include="PostScheduler.cs" />
+    <Compile Include="Schedulers\IScheduledItem.cs" />
+    <Compile Include="PageStatisticsGenerator\PageStatistics.cs" />
+    <Compile Include="Schedulers\PostScheduler\PostScheduler.cs" />
+    <Compile Include="Schedulers\PostScheduler\PostSchedulerAdapter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScheduledPost.cs" />
+    <Compile Include="Schedulers\PostScheduler\ScheduledPost.cs" />
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -115,7 +118,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
