Adding proxy to Statistic

--- a/FacebookWinFormsApp/C23 Ex01 Asaf 208543702 Amit 209088434.csproj
+++ b/FacebookWinFormsApp/C23 Ex01 Asaf 208543702 Amit 209088434.csproj
@@ -90,6 +90,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PageStatisticsGenerator\IStatisticHandler.cs" />
+    <Compile Include="PageStatisticsGenerator\ProxyStatisticHandler.cs" />
     <Compile Include="Schedulers\IScheduler.cs" />
     <Compile Include="FBService\FBService.cs" />
     <Compile Include="FormMain.cs">
