--- a/FacebookWinFormsApp/C23 Ex01 Asaf 208543702 Amit 209088434.csproj
+++ b/FacebookWinFormsApp/C23 Ex01 Asaf 208543702 Amit 209088434.csproj
@@ -91,6 +91,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PageStatisticsGenerator\IStatisticHandler.cs" />
+    <Compile Include="PageStatisticsGenerator\MostCheckInUpdater.cs" />
+    <Compile Include="PageStatisticsGenerator\MostLikedPagesUpdater.cs" />
+    <Compile Include="PageStatisticsGenerator\ListsUpdater.cs" />
     <Compile Include="PageStatisticsGenerator\ProxyStatisticHandler.cs" />
     <Compile Include="Schedulers\IScheduler.cs" />
     <Compile Include="FBService\FBService.cs" />
