--- a/FacebookWinFormsApp/C23 Ex01 Asaf 208543702 Amit 209088434.csproj
+++ b/FacebookWinFormsApp/C23 Ex01 Asaf 208543702 Amit 209088434.csproj
@@ -105,6 +105,7 @@
     </Compile>
     <Compile Include="Schedulers\IScheduledItem.cs" />
     <Compile Include="PageStatisticsGenerator\PageStatistics.cs" />
+    <Compile Include="Schedulers\PostScheduler\DatePostIterator.cs" />
     <Compile Include="Schedulers\PostScheduler\PostScheduler.cs" />
     <Compile Include="Schedulers\PostScheduler\PostSchedulerAdapter.cs" />
     <Compile Include="Program.cs" />
